src/components/ScrollToTop/ScrollToTop.module.css
.scrollToTop {
  display: block;
  position: fixed;
  width: 4rem;
  height: 4rem;
  bottom: 1.64286rem;
  right: 50px;
  padding: 0;
  overflow: hidden;
  outline: none !important;
  border: none;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
  cursor: pointer;
  border-radius: 50%;
  background: var(--color-link);
  transition: var(--transition);
  transform: translateY(150%);
  z-index: 99;
}

.scrollToTop:hover {
  text-decoration: none;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
}

.scrollToTop.reveal {
  transform: translateY(0%);
}

.scrollToTop svg {
  display: inline-block;
  color: var(--color-svg-fill);
}

.visuallyHidden {
  display: inline-block;
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1;
  width: 1;
  margin: -1;
  padding: 0;
  border: 0;
}

.wrapper {
  position: relative;
}

@media screen and (max-width: 767px) {
  .scrollToTop {
    width: 3rem;
    height: 3rem;
  }
}

@media screen and (max-width: 650px) {
  .scrollToTop {
    right: 20px;
  }
}

